<resources>
    <string name="app_name">FindApp</string>
    <string name="title_activity_banco">Banco</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome!</string>
    <string name="todo">TODO</string>
    <string name="find_your_atm_with_a_click">Find your ATM with a click!</string>
    <string name="todoo">TODO</string>
    <string name="logo_app">Logo app</string>
    <string name="welcomeText">Welcome!</string>
    <string name="find_your_bank_with_a_click">Find your bank with a click.</string>
    <string name="_100_safe">100% safe</string>
    <string name="jobs">Jobs</string>
    <string name="contact">Contact</string>
    <string name="contactTitle">Contact</string>
    <string name="messageContact">Message</string>
    <string name="email">Email</string>
    <string name="write_your_request_please">Write your request, please!</string>
    <string name="send">Send</string>
    <string name="password">Password</string>
    <string name="piggy_bank">Piggy Bank</string>
    <string name="username">Username</string>
    <string name="enter">Enter</string>
    <string name="new_user">New User</string>
    <string name="piggybank_logo">Piggybank logo</string>
    <string name="piggy_image">piggy Image</string>
    <string name="software_developer">Software Developer</string>
    <string name="location_california_usa">Location: California, USA</string>
    <string name="regular_full_time">Regular Full-Time</string>
    <string name="relevant_experience_of_3_years_in_c_oop_mvc_web_api_asp_net_windows_services_web_services_soap_y_o_restful_front_end_development_html_angular_2_css_sql_server_principles_and_design_patterns">Relevant experience of +3 years in C# OOP MVC, Web API, ASP .NET, Windows Services, Web Services (SOAP y/o RESTful). Front-end development (HTML, Angular 2+, CSS) SQL Server Principles and design patterns</string>
    <string name="apply">APPLY</string>
    <string name="react_native_developer_latam">React Native Developer LATAM</string>
    <string name="location_bogot_colombia">Location: Bogotá, Colombia</string>
    <string name="proven_3_years_experience_in_mobile_development_using_react_native_strong_proficiency_in_javascript_typescript_and_es6_knowledge_of_mobile_app_design_principles_and_user_experience_best_practices_familiarity_with_restful_apis_and_asynchronous_programming_experience_with_version_control_systems_e_g_git_excellent_problem_solving_skills_and_attention_to_detail_strong_communication_and_teamwork_skills">Proven 3+ years experience in mobile development using React Native. Strong proficiency in JavaScript, TypeScript, and ES6+. Knowledge of mobile app design principles and user experience best practices. Familiarity with RESTful APIs and asynchronous programming. Experience with version control systems (e.g., Git). Excellent problem-solving skills and attention to detail. Strong communication and teamwork skills.</string>
    <string name="talent_pathway">Talent Pathway</string>
    <string name="location_oakville_ontario">Location: Oakville, Ontario</string>
    <string name="students_of_communication_or_similar_occupations_looking_to_complete_their_internship_have_the_approval_of_the_university_for_signing_internship_contract_not_having_signed_apprenticeship_contracts_previously_strong_written_and_verbal_communication_skills_detail_oriented_proactive_with_a_creative_mindset_canva_and_adobe_suite_handling_is_a_plus_ability_to_work_collaboratively_in_a_team_environment">Students of Communication or similar occupations looking to complete their internship.Have the approval of the university for signing internship contract .Not having signed apprenticeship contracts previously. Strong written and verbal communication skills. Detail-oriented, proactive with a creative mindset. Canva And adobe suite handling is a plus. Ability to work collaboratively in a team environment.</string>
    <string name="welcomeAdmin">Welcome!</string>
    <string name="add_bank">Add Bank</string>
    <string name="delete_bank">Delete Bank</string>
    <string name="list_bank">List Bank</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="name_bank">Name Bank</string>
    <string name="address">Address</string>
    <string name="schedule">Schedule</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">longitude</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="add">Add</string>
    <string name="bankimage">BankImage</string>
    <string name="add_image">Add Image</string>
    <string name="create">CREATE</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up!</string>
    <string name="create_account">Create an Account</string>
    <string name="add_register">Add Register</string>
    <string name="help">Help!</string>
    <string name="nickname">nickname</string>
</resources>