<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubikbubblesregular"
            android:gravity="center"
            android:padding="20sp"
            android:text="@string/contactTitle"
            android:textColor="#92BF2F"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candalregular"
            android:gravity="center"
            android:padding="15sp"
            android:text="@string/write_your_request_please"
            android:textColor="#FFA07A"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmailContact"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailContactTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="textEmailAddress"
                tools:ignore="ExtraText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutMessage"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/messageContact"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageTextField"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginHorizontal="20dp"
                android:inputType="textMultiLine"
                android:paddingBottom="100dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sendContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/candalregular"
            android:text="@string/send"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>