<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarBanco">

    <ScrollView
        android:id="@+id/addBankScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/addImageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rubikbubblesregular"
                android:text="@string/add_image"
                android:textAlignment="center"
                android:textColor="#92BF2F"
                android:textSize="40sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/addBankImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    app:srcCompat="@drawable/camara1"
                    android:contentDescription="@string/bankimage"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/roundedImageView"/>

                <Button
                    android:id="@+id/addImageButton"
                    android:layout_width="187dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="31dp"
                    android:text="@string/add_image"
                    android:layout_gravity="center"
                    android:background="@drawable/gradientone"
                    app:backgroundTint="@null"
                    android:textColor="#535B61"
                    android:fontFamily="@font/rubikbubblesregular"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_marginVertical="20dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameBankText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_bank"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/address"
                        android:layout_marginVertical="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addressText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/address"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/schedule"
                        android:layout_marginVertical="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/scheduleText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/schedule"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/latitude"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginVertical="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/latitudeText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/latitude" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/longitude"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/longuitudeText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/longitude" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginVertical="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/typeText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/type" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/locationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="9dp"
                    android:text="@string/location"
                    android:background="@drawable/gradientone"
                    app:backgroundTint="@null"
                    android:textColor="#535B61"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:fontFamily="@font/rubikbubblesregular" />

                <Button
                    android:id="@+id/addBankAdminButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_register"
                    android:background="@drawable/gradientone"
                    app:backgroundTint="@null"
                    android:textColor="#535B61"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_marginStart="250dp"
                    android:fontFamily="@font/rubikbubblesregular"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>